# khemeia-eln

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.agents/skills/khemeia-next-feature/: SKILL.md
app/: bootstrap.py  config.py
app/database/: connection.py
docs/: feature_list.json  feature_list_v4.json  plan-v2.md  plan-v3.md  plan_v4.md  spec.md  spec_v4.md
src/: __init__.py  config.py  main.py
src/database/: schema.sql
tests/: conftest.py  test_config.py  test_project_bootstrap.py
tests/repositories/: test_connection.py
tests/services/: test_config.py  test_welcome_form.py
